<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <com.dzm.bytesummer.mycamera.components.CameraView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp" />

    <ImageButton
        android:id="@+id/buttonGallery2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="54dp"
        android:layout_marginBottom="155dp"
        android:background="@color/alpha"
        android:contentDescription="@string/gallery_btn_hint"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:srcCompat="@drawable/ic_gallery" />

    <Button
        android:id="@+id/toCapture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="5dp"
        android:text="@string/cmr_btn_hint" />

    <ImageButton
        android:id="@+id/buttonStartRec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="140dp"
        android:background="@color/alpha"
        android:contentDescription="@string/rec_btn_hint"
        android:src="@drawable/ic_record" />

    <ImageButton
        android:id="@+id/buttonReverse2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="155dp"
        android:background="@color/alpha"
        android:contentDescription="@string/rev_btn_hint"
        app:srcCompat="@drawable/ic_reverse_face" />

    <ImageButton
        android:id="@+id/buttonStopRec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="140dp"
        android:background="@color/alpha"
        android:contentDescription="@string/rec_stop_btn_hint"
        android:src="@drawable/ic_record_stop"
        android:visibility="invisible" />

</FrameLayout>