<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <com.dzm.bytesummer.mycamera.components.CameraView
        android:id="@+id/cameraView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp" />

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp" />

    <ImageButton
        android:id="@+id/buttonShutter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="140dp"
        android:background="@color/alpha"
        android:contentDescription="@string/cpt_btn_hint"
        android:minHeight="48dp"
        android:src="@drawable/ic_shutter" />

    <ImageButton
        android:id="@+id/buttonReverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="155dp"
        android:background="@color/alpha"
        android:contentDescription="@string/rev_btn_hint"
        app:srcCompat="@drawable/ic_reverse_face" />

    <ImageButton
        android:id="@+id/buttonGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="54dp"
        android:layout_marginBottom="155dp"
        android:background="@color/alpha"
        android:contentDescription="@string/gallery_btn_hint"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:srcCompat="@drawable/ic_gallery" />


</FrameLayout>